# privacy-patterns-llm-code-generate

./: .gitignore  README.md  pyproject.toml
benchmarks/: REPORTS.md  __init__.py  dataset.py  metrics.py  owasp_map.py  realvuln_map.py  report.schema.json  report_document.py  runner.py
benchmarks/realvuln/: __init__.py  loader.py  matcher.py  runner.py  scorable_rules.py
benchmarks/reports/: owasp-latest.json  realvuln-latest.json  verify-latest.json
docs/: architecture.md
privacy/analyzers/: analyzer.py
privacy/rules/: base.py  helpers.py  metadata.py  pg001_pii_logging.py  pg002_plaintext_storage.py  pg003_pii_third_party.py  pg004_raw_id_analytics.py  pg005_pii_without_consent.py  pg006_marketing_without_opt_out.py  pg007_sensitive_access_without_auth.py  pg008_sensitive_change_without_audit.py
samples/: privacy_showcase_vulnerable.py  security_showcase_vulnerable.py
security/analyzers/security/: analyzer.py
security/api/: main.py
security/cli/: main.py
security/core/: demo.py  impact.py  scanner.py
security/models/: finding.py
security/reporters/: demo.py  text.py
tests/: test_benchmark.py  test_demo.py  test_impact.py  test_privacy_rules.py  test_realvuln.py  test_rules.py  test_scanner.py
vscode-extension/: package-lock.json  package.json
vscode-extension/src/: analysisDiff.ts  analysisDiffView.ts  analysisHistory.ts  chatViewProvider.ts  client.ts  codeUtils.ts  comparisonModel.ts  comparisonView.ts  config.ts  diagnostics.ts  extension.ts  fileUtils.ts  filenameUtils.ts  openai.ts  report.ts  systemPrompt.ts  types.ts
(+22 files in other folders)
