[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vibecodeguide"
version = "0.1.0"
description = "VibeCodeGuide — static security and privacy analyzer for Python code"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
vibecodeguide = "security.cli.main:main"
security = "security.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["security*", "privacy*"]
